--- a/src/html/blocks/logos.html
+++ b/src/html/blocks/logos.html
@@ -3,11 +3,11 @@
     <div class="logos__items">
       <h1 class="logos__title">Our Travel Partner</h1>
       <div class="logos__content">
-        <img src="../../img/icons/traveloka.svg" alt="#" />
-        <img src="../../img/icons/airbnb.svg" alt="#" />
-        <img src="../../img/icons/Expedia.svg" alt="#" />
-        <img src="../../img/icons/Skyscanner.svg" alt="#" />
-        <img src="../../img/icons/american-airlines.svg" alt="#" />
+        <img src="./img/icons/traveloka.svg" alt="#" />
+        <img src="./img/icons/airbnb.svg" alt="#" />
+        <img src="./img/icons/Expedia.svg" alt="#" />
+        <img src="./img/icons/Skyscanner.svg" alt="#" />
+        <img src="./img/icons/american-airlines.svg" alt="#" />
       </div>
     </div>
   </div>
