--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -1,4 +1,4 @@
-<section class="discover">
+<section class="discover" id="discover">
   <div class="container">
     <div class="discover__grid">
       <div class="discover__descr">
