--- a/src/html/blocks/feetback.html
+++ b/src/html/blocks/feetback.html
@@ -1,4 +1,4 @@
-<section class="feetback">
+<section class="feetback" id="feetback">
   <div class="container">
     <div class="feetback__grid">
       <div class="feetback__col">
