--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -6,14 +6,20 @@
       </a>
       <ul class="nav__list">
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Package</a></li>
+        <li><a href="#discover">About</a></li>
+        <li><a href="#popular">Package</a></li>
         <li><a href="#">FAQ</a></li>
-        <li><a href="#">Community</a></li>
+        <li><a href="#subscribe">Community</a></li>
       </ul>
       <div class="nav__btn">
         <a href="#" class="btn-login">Login</a>
         <a href="#" class="btn-signup">Sign Up</a>
+      </div>
+
+      <div class="nav__icon">
+        <button class="mobile-nav-btn">
+          <div class="nav-icon"></div>
+        </button>
       </div>
     </nav>
   </div>
