--- a/src/html/blocks/mobile-nav.html
+++ b/src/html/blocks/mobile-nav.html
@@ -1,9 +1,9 @@
 <div class="mobile-nav">
-	<ul class="mobile-nav__list">
-		<li><a href="#" class="active">Home</a></li>
-		<li><a href="#!">Services</a></li>
-		<li><a href="#!">About</a></li>
-		<li><a href="#!">Projects</a></li>
-		<li><a href="#!">Contact</a></li>
-	</ul>
+  <ul class="mobile-nav__list">
+    <li><a href="#" class="active">Home</a></li>
+    <li><a href="#desire">About</a></li>
+    <li><a href="#popular">Packages</a></li>
+    <li><a href="#!">FAQ</a></li>
+    <li><a href="#feetback">Community</a></li>
+  </ul>
 </div>
